--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ushld",
   "version": "0.0.0",
   "description": "Tell people on the internet what they should do",
-  "main": "main.js",
+  "main": "server/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +22,20 @@
   },
   "homepage": "https://github.com/rileyjshaw/ushld",
   "dependencies": {
-    "express": "~4.9.0"
+    "express": "~4.9.0",
+    "fitter-happier-text": "0.0.3"
+  },
+  "devDependencies": {
+    "gulp-load-plugins": "~0.6.0",
+    "gulp-streamify": "0.0.5",
+    "gulp-jshint": "~1.8.4",
+    "vinyl-source-stream": "~1.0.0",
+    "gulp-ruby-sass": "~0.7.1",
+    "gulp-autoprefixer": "~1.0.1",
+    "gulp-minify-css": "~0.3.10",
+    "browserify": "~5.12.0",
+    "gulp-uglify": "~1.0.1",
+    "gulp": "~3.8.8",
+    "jade": "~1.7.0"
   }
 }
