--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/rileyjshaw/ushld",
   "dependencies": {
     "express": "~4.9.0",
-    "fitter-happier-text": "0.0.3"
+    "fitter-happier-text": "0.0.3",
+    "jade": "~1.7.0"
   },
   "devDependencies": {
     "gulp-load-plugins": "~0.6.0",
@@ -35,7 +36,6 @@
     "gulp-minify-css": "~0.3.10",
     "browserify": "~5.12.0",
     "gulp-uglify": "~1.0.1",
-    "gulp": "~3.8.8",
-    "jade": "~1.7.0"
+    "gulp": "~3.8.8"
   }
 }
