--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "~4.9.0",
     "fitter-happier-text": "0.0.3",
     "jade": "~1.7.0",
-    "redis": "~0.12.1"
+    "redis": "~0.12.1",
+    "body-parser": "~1.9.0"
   },
   "devDependencies": {
     "gulp-load-plugins": "~0.6.0",
